# Consensus-Protocol

./: .gitignore  README.md  main.py  node_service.py  pyproject.toml
data/node_1/: block_queue.json  blockchain.json
data/node_3/: block_queue.json
models/: blockchain.py  node.py
scripts/: node_service.sh
utils/: files.py
