[tool.poetry]
name = "consensus-protocol"
version = "0.1.0"
description = "Consensus protocol for thenewboston blockchain."
authors = ["bucky <buckyroberts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nameko = "^2.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
